# ir_test

./: CKV_AWS_163.tf  CKV_AWS_20.yaml  CKV_AWS_20_1.tf  CKV_AWS_21.json  CKV_AWS_21.yaml  CKV_AWS_28.json  CKV_AWS_28.yaml  CKV_AWS_28_json.template  CKV_AWS_54.tf  CKV_AWS_55.tf  CKV_AWS_57.json  CKV_AWS_57.yaml  CKV_AWS_90.json  CKV_AWS_90.template  CKV_AWS_90_json.template  CKV_GCP_14.tf  CKV_GCP_32_1.tf  CKV_GCP_40.tf  Dockerfile  README.md  alicloud-bucket.tf  composer.json  db-app.tf  go.mod  go.sum  infra.yaml  package-lock.json  package.json  pom.xml  rds.tf  requirements.txt  s3.tf  s3c.tf  test.tf  valid_ckv_aws_3.tf
cargo-monorepo/: Cargo.toml  README.md
cargo-single/: Cargo.toml  README.md
cargo-single/src/: main.rs
composer-monorepo/: README.md  composer.json
composer-single/: README.md  composer.json
composer-single/src/: index.php
go-monorepo/: README.md  go.work
go-single/: README.md  go.mod  go.sum  main.go
gradle-monorepo/: README.md  build.gradle  settings.gradle
gradle-monorepo/app/: build.gradle
gradle-single/: README.md  build.gradle  settings.gradle
maven-multi-module-benchmark/: pom.xml
npm-monorepo/: README.md  package-lock.json  package.json
npm-single/: README.md  package-lock.json  package.json
nuget-monorepo/: README.md  Solution.sln
nuget-single/: Fixture.csproj  Program.cs  README.md  packages.lock.json
pip-monorepo/: README.md
pip-single/: README.md  app.py  requirements.txt
pnpm-monorepo/: README.md  package.json  pnpm-lock.yaml
pnpm-single/: README.md  package.json  pnpm-lock.yaml
poetry-monorepo/: README.md  pyproject.toml
poetry-monorepo/libs/shared/: pyproject.toml
poetry-monorepo/libs/shared/shared_lib/: __init__.py
poetry-monorepo/services/api/: pyproject.toml
poetry-monorepo/services/api/api_service/: __init__.py
poetry-monorepo/services/worker/: pyproject.toml
poetry-monorepo/services/worker/worker_service/: __init__.py
poetry-single/: README.md  pyproject.toml
poetry-single/poetry_single_fixture/: __init__.py
python/: requirements.txt
sbom/: package.json
yarn-monorepo/: README.md  package.json
yarn-single/: README.md  package.json
(+88 files in other folders)
