[tool.poetry]
name = "poetry-monorepo-root"
version = "0.1.0"
description = "Root - Poetry doesn't natively support workspaces, this is a multi-pyproject layout"
authors = ["fixture <fixture@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
