[tool.poetry]
name = "shared-lib"
version = "0.1.0"
description = "Shared library used by api and worker"
authors = ["fixture <fixture@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "2.10"
pyyaml = "5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
